Internacionalização no backend

--- a/src/main/webapp/produto.xhtml
+++ b/src/main/webapp/produto.xhtml
@@ -7,20 +7,20 @@
 
 <h:head>
 
-	<style>
-.ui-layout-unit {
-	border: 0px;
-}
+<!-- <style> -->
+<!-- .ui-layout-unit { -->
+<!-- 	border: 0px; -->
+<!-- } -->
 
-.ui-layout-north {
-	z-index: 20 !important;
-	overflow: visible !important;
-}
+<!-- .ui-layout-north { -->
+<!-- 	z-index: 20 !important; -->
+<!-- 	overflow: visible !important; -->
+<!-- } -->
 
-.ui-layout-north .ui-layout-unit-content {
-	overflow: visible;
-}
-</style>
+<!-- .ui-layout-north .ui-layout-unit-content { -->
+<!-- 	overflow: visible; -->
+<!-- } -->
+<!-- </style> -->
 
 </h:head>
 
@@ -30,7 +30,7 @@
 		<p:layoutUnit position="north" size="65">
 			<h:form>
 				<p:menubar>
-					<p:menuitem value="Produtos" url="produto.xhtml" />
+					<p:menuitem value="msg['menuitem.produto']" url="produto.xhtml" />
 				</p:menubar>
 			</h:form>
 		</p:layoutUnit>
