Adicionando template e cadastro de clientes

--- a/src/main/webapp/produto.xhtml
+++ b/src/main/webapp/produto.xhtml
@@ -30,8 +30,9 @@
 		<p:layoutUnit position="north" size="65">
 			<h:form>
 				<p:menubar>
-					<p:menuitem value="msg['menuitem.produto']" url="produto.xhtml" />
+					<p:menuitem value="#{msg['menuitem.produtos']}" url="produto.xhtml" />
 				</p:menubar>
+				
 			</h:form>
 		</p:layoutUnit>
 
