--- a/src/main/webapp/cliente.xhtml
+++ b/src/main/webapp/cliente.xhtml
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3c.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
-<h:head>
-</h:head>
-<h:body>
-	<h:form style="margin: 0 auto; width: 20%; margin-top: 20%">
-		<p:growl id="messages" showDetail="true" sticky="true" />
-		<p:fieldset legend="#{msg['cadastro.cliente']}">
-			<h:panelGrid columns="2">
+	xmlns:ui="http://java.sun.com/jsf/facelets" template="template.xhtml">
+
+	<ui:define name="centro">
+
+		<!-- <h1>#{msg['leg.cadastro.produtos']}</h1> -->
+
+		<h:form id="form">
+
+			<p:growl id="messages" showDetail="true" sticky="true" />
+
+			<p:panel id="toggleable" header="Cadastro de Clientes"
+				toggleable="true" toggleSpeed="500" closeSpeed="500"
+				widgetVar="panel" style="margin-bottom:20px">
+				<h:panelGrid columns="2">
 
 				<p:outputLabel value="#{msg['cliente.email']}:" for="email" />
 				<p:inputText id="email" value="#{clienteBean.cliente.email}"
@@ -23,14 +28,35 @@
 
 				<p:outputLabel value="#{msg['cliente.cpf']}:" for="cpf" />
 				<p:inputMask id="cpf" mask="999.999.999-99" required="true" value="#{clienteBean.cpf}"> </p:inputMask>
+				
+				<p:commandButton value="#{msg['botao.salvar']}"
+				action="#{clienteBean.salvar()}" update="@form :#{p:component('table')}" />
+				
 			</h:panelGrid>
+			</p:panel>
+		</h:form>
 
-			<p:commandButton icon="ui-icon-user" value="#{msg['botao.salvar']}"
-				action="#{clienteBean.salvar()}" update="@form #{p.component('messages')}" />
+		<h:form>
 
-		</p:fieldset>
+			<p:panel id="toggleable2" header="Lista de Clientes"
+				toggleable="true" toggleSpeed="500" closeSpeed="500"
+				widgetVar="panel2" style="margin-bottom:20px">
+					<h:panelGrid columns="1">
+				<p:dataTable id="table" var="cliente"
+					value="#{clienteBean.lista()}">
 
-	</h:form>
-</h:body>
+					<p:column headerText="Email">
+						<h:outputText value="#{cliente.email}" />
+					</p:column>
 
-</html>
+					<p:column headerText="CPF" style="text-align:center;">
+						<h:outputText value="#{cliente.cpf}" />
+					</p:column>
+				</p:dataTable>
+				</h:panelGrid>
+			</p:panel>
+
+		</h:form>
+	</ui:define>
+
+</ui:composition>
