--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -32,6 +32,10 @@
 				<p:menubar>
 					<p:menuitem value="Produtos" url="produto.xhtml" />
 					<p:menuitem value="Clientes" url="cliente.xhtml" />
+					<p:menuitem value="Compras" url="compra.xhtml" />
+					<p:submenu label="usuario" style="float: right;" icon="ui-icon-person">
+						<p:menuitem value="Sair" action="#{loginBean.logout()}"/>
+					</p:submenu>
 				</p:menubar>
 
 			</h:form>
