--- a/src/main/webapp/cliente.xhtml
+++ b/src/main/webapp/cliente.xhtml
@@ -6,8 +6,6 @@
 
 	<ui:define name="centro">
 
-		<!-- <h1>#{msg['leg.cadastro.produtos']}</h1> -->
-
 		<h:form id="form">
 
 			<p:growl id="messages" showDetail="true" sticky="true" />
@@ -17,17 +15,17 @@
 				widgetVar="panel" style="margin-bottom:20px">
 				<h:panelGrid columns="2">
 
-				<p:outputLabel value="#{msg['cliente.email']}:" for="email" />
+				<p:outputLabel value="E-mail:" for="email" />
 				<p:inputText id="email" value="#{clienteBean.cliente.email}"
 					required="true" />
 
 
-				<p:outputLabel value="#{msg['cliente.senha']}:" for="senha" />
+				<p:outputLabel value="Senha:" for="senha" />
 				<p:password id="senha" value="#{clienteBean.cliente.senha}"
 					required="true" />
 
-				<p:outputLabel value="#{msg['cliente.cpf']}:" for="cpf" />
-				<p:inputMask id="cpf" mask="999.999.999-99" required="true" value="#{clienteBean.cpf}"> </p:inputMask>
+				<p:outputLabel value="CPF:" for="cpf" />
+				<p:inputMask id="cpf" mask="999.999.999-99" required="true" value="#{clienteBean.cliente.cpf}"> </p:inputMask>
 				
 				<p:commandButton value="#{msg['botao.salvar']}"
 				action="#{clienteBean.salvar()}" update="@form :#{p:component('table')}" />
