--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -7,7 +7,7 @@
 
 <h:head>
 
-	<style>
+<!--	<style>
 .ui-layout-unit {
 	border: 0px;
 }
@@ -20,7 +20,7 @@
 .ui-layout-north .ui-layout-unit-content{
 	overflow: visible;
 }
-</style>
+ </style> -->
 </h:head>
 
 <h:body style="background:#c2c2c2">
