--- a/src/main/webapp/produto.xhtml
+++ b/src/main/webapp/produto.xhtml
@@ -38,7 +38,9 @@
 						update="@form :#{p:component('table')} :#{p:component('messages')}" />
 						
 					<p:commandButton value="#{msg['botao.importar']}" immediate="true"
-						action="#{wBProduto.importarProdutos('http://www.json-generator.com/api/json/get/cqjiDOWlsO?indent=0', true)}"
+						action="#{wBProduto.
+						importarProdutos('http://www.json-generator.com/api/json/get/cqjiDOWlsO?indent=0', 
+						true)}"
 						update="@form :#{p:component('table')}" />
 
 				</h:panelGrid>
